--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ http {
     keepalive_timeout  65;
     lua_code_cache off;
     gzip  on;
-    resolver 127.0.0.11 8.8.8.8;          
+    resolver 127.0.0.11 8.8.8.8 ipv6=off;          
     real_ip_header     X-Forwarded-For;
     real_ip_recursive on;
     lua_package_path '/opt/app/?.lua;;';
@@ -27,7 +27,7 @@ http {
         }
         location = /lua-resty-s3/proxy/ {
             internal;
-            resolver 127.0.0.11 8.8.8.8;          
+            resolver 127.0.0.11 8.8.8.8 ipv6=off;          
             set_unescape_uri $my_host $arg_host;
             set_unescape_uri $my_uri $arg_uri;
             proxy_set_header User-Agent 'Mozilla/5.0 (X11; Linux x86_64; rv:16.0)';
@@ -41,7 +41,7 @@ http {
             set_unescape_uri $mime $arg_mime;
             proxy_pass_request_headers off;
             more_clear_headers 'Host';
-            resolver 127.0.0.11 8.8.8.8;          
+            resolver 127.0.0.11 8.8.8.8 ipv6=off;          
             more_clear_headers 'Connection';
             more_clear_headers 'Content-Length';
             more_clear_headers 'User-Agent';
