--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,9 @@ http {
     real_ip_header     X-Forwarded-For;
     real_ip_recursive on;
     lua_package_path '/opt/app/?.lua;;';
+    upstream s3app {
+        s3:9000
+    };
     server {
         listen       80;
         server_name  localhost;
@@ -27,11 +30,11 @@ http {
         }
         location = /lua-resty-s3/proxy/ {
             internal;
-            resolver 127.0.0.11 8.8.8.8 ipv6=off;          
+            resolver 8.8.8.8 ipv6=off;          
             set_unescape_uri $my_host $arg_host;
             set_unescape_uri $my_uri $arg_uri;
             proxy_set_header User-Agent 'Mozilla/5.0 (X11; Linux x86_64; rv:16.0)';
-            proxy_pass http://s3:9000$my_uri;
+            proxy_pass http://s3app$my_uri;
         }
         location /lua-resty-s3/upload/ {
             internal;
@@ -41,7 +44,7 @@ http {
             set_unescape_uri $mime $arg_mime;
             proxy_pass_request_headers off;
             more_clear_headers 'Host';
-            resolver 127.0.0.11 8.8.8.8 ipv6=off;          
+            resolver 8.8.8.8 ipv6=off;          
             more_clear_headers 'Connection';
             more_clear_headers 'Content-Length';
             more_clear_headers 'User-Agent';
@@ -50,7 +53,7 @@ http {
             proxy_set_header Authorization $auth;
             proxy_set_header content-type $mime;
             proxy_set_header Content-MD5 '';
-            proxy_pass http://s3:9000$file;
+            proxy_pass http://s3app$file;
         }
         location /test {
           content_by_lua_block  {
