--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
     real_ip_recursive on;
     lua_package_path '/opt/app/?.lua;;';
     upstream s3app {
-        s3:9000;
+      server s3:9000;
     };
     server {
         listen       80;
