--- a/nginx.conf
+++ b/nginx.conf
@@ -56,6 +56,7 @@ http {
             proxy_pass http://s3app$file;
         }
         location /test {
+         resolver 8.8.8.8 ipv6=off;   
           content_by_lua_block  {
             require("s3/init")()
           }
