--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
             set_unescape_uri $my_host $arg_host;
             set_unescape_uri $my_uri $arg_uri;
             proxy_set_header User-Agent 'Mozilla/5.0 (X11; Linux x86_64; rv:16.0)';
-            proxy_pass http://my_host$my_uri;
+            proxy_pass http://$my_host$my_uri;
         }
         location /lua-resty-s3/upload/ {
             internal;
