--- a/nginx.conf
+++ b/nginx.conf
@@ -53,7 +53,7 @@ http {
             proxy_set_header Authorization $auth;
             proxy_set_header content-type $mime;
             proxy_set_header Content-MD5 '';
-            proxy_pass http://s3app$file;
+            proxy_pass http://s3app/$file;
         }
         location /test {
          resolver 114.114.114.114 ipv6=off;   
